docs/docs/reports/hw_lbm.log
Traceback (most recent call last):
  File "/Users/yuchiaol_whoi/anaconda3/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/yuchiaol_whoi/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/yuchiaol_whoi/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/yuchiaol_whoi/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/Users/yuchiaol_whoi/anaconda3/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/Users/yuchiaol_whoi/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 540, in async_execute
    await self.async_execute_cell(
  File "/Users/yuchiaol_whoi/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/Users/yuchiaol_whoi/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
* sample file fot products of a linear integration
DSET ^linear.test.grd
OPTIONS SEQUENTIAL YREV BIG_ENDIAN
TITLE time-integration
UNDEF -999.
XDEF 64 LINEAR 0. 5.625
YDEF 32 LEVELS -85.761 -80.269 -74.745 -69.213 -63.679 -58.143 -52.607
-47.070 -41.532 -35.995 -30.458 -24.920 -19.382 -13.844 -8.3067 -2.7689
2.7689 8.3067 13.844 19.382 24.920 30.458 35.995 41.532 47.070 52.607
58.143 63.679 69.213 74.745 80.269 85.761
ZDEF 11  LEVELS 1000 950 900 850 700 500 300 200 100 30 10
TDEF 60 LINEAR 01jan0000 1dy
VARS 8
psi    11 99 stream function     [m**2/s]
chi    11 99 velocity potential  [m**2/s]
u      11 99 zonal wind          [m/s]
v      11 99 meridional wind     [m/s]
w      11 99 p-vertical velocity [hPa/s]
t      11 99 temperature         [K]
z      11 99 geopotential height [m]
p       1 99 surface pressure    [hPa]
ENDVARS
------------------

[0;36m  File [0;32m"<ipython-input-1-2926625b557c>"[0;36m, line [0;32m1[0m
[0;31m    * sample file fot products of a linear integration[0m
[0m             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-2926625b557c>, line 1)

